--- a/Front-end/WebTrainTicket/styles/main_styles.css
+++ b/Front-end/WebTrainTicket/styles/main_styles.css
@@ -223,7 +223,7 @@ section
 }
 .fill_height
 {
-	height: 100%;
+	height: 75%;
 }
 .super_container
 {
@@ -934,7 +934,7 @@ section
 .search
 {
 	width: 100%;
-	height: 300px;
+	height: 600px;
 	background: linear-gradient(to right, #fa9e1b, #8d4fff);
 	z-index: 10;
 }
@@ -1159,7 +1159,7 @@ section
 .intro_title
 {
 	font-weight: 700;
-	color: #2d2c2c;
+	color: #FFFFFF;
 	margin-top: -14px;
 }
 .intro_text
@@ -1170,7 +1170,7 @@ section
 {
 	font-size: 24px;
 	font-style: italic;
-	color: #929191;
+	color: #FFFFFF;
 	line-height: 1.336;
 	margin-bottom: 0px;
 }
