--- a/Backend/style.css
+++ b/Backend/style.css
@@ -4,7 +4,7 @@ body {
   font-size: 62.5%;
   font-family: 'Lato', sans-serif;
   font-weight: 300;
-  color: #B6B6B6;
+  color: #313a3d;
 }
 body section {
   background: white;
