--- a/Backend/style.css
+++ b/Backend/style.css
@@ -22,6 +22,14 @@ body section h1 {
   font-family: 'Lato', sans-serif;
   font-weight: 100;
 }
+.container {
+    position:absolute;
+    left:50%;
+    top:50%;
+    transform: translate(-50%,-50%);
+    margin-top:-30px;
+    text-align:center;
+  }
 
 form {
   width: 58.3333333333%;
@@ -131,6 +139,54 @@ form input[type="submit"] {
   -ms-transition: all 333ms ease-in-out;
   transition: all 333ms ease-in-out;
 }
+.column {
+    float: left;
+    width: 50%;
+    padding: 10px;
+    height: 300px; /* Should be removed. Only for demonstration */
+  }
+  
+  /* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+.button {
+        background: #FD9638;
+        color: white;
+        -webkit-appearance: none;
+        border: none;
+        text-transform: uppercase;
+        position: relative;
+        padding: 13px 50px;
+        font-size: 1.4em;
+        letter-spacing: 0.1em;
+        font-family: 'Lato', sans-serif;
+        font-weight: 300;
+        -webkit-transition: all 333ms ease-in-out;
+        -moz-transition: all 333ms ease-in-out;
+        -o-transition: all 333ms ease-in-out;
+        -ms-transition: all 333ms ease-in-out;
+        transition: all 333ms ease-in-out;
+  }
+  button:hover {
+    background: #313A3D;
+    color: #FD9638;
+  }
+
+  button:focus {
+    outline: none;
+    background: #cd6302;
+  }
+
+  .button1 {padding: 10px 24px;}
+  .button2 {padding: 12px 28px;}
+  .button3 {padding: 14px 40px;}
+  .button4 {padding: 32px 16px;}
+  .button5 {padding: 16px;}
+
 form input[type="submit"]:hover {
   background: #313A3D;
   color: #FD9638;
