--- a/Backend/style.css
+++ b/Backend/style.css
@@ -8,11 +8,14 @@ body {
 }
 body section {
   background: white;
-  margin: 60px auto 120px;
+  margin-bottom: 0px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: auto;
   border-top: 15px solid #313A3D;
   text-align: center;
   padding: 50px 0 110px;
-  width: 80%;
+  width: 90%;
   max-width: 1100px;
 }
 body section h1 {
